# torrust-index-gui

./: .dockerignore  .env.development  .env.local  .eslintignore  .eslintrc.js  .gitignore  .gitmodules  COPYRIGHT  Cargo.toml  Containerfile  Dockerfile  README.md  SECURITY.md  app.vue  compose.yaml  config-idx-back.local.toml  config-tracker.local.toml  config.toml  cspell.json  cypress.config.ts  dot.env.local  jest.config.ts  nuxt.config.ts  package-lock.json  package.json  postcss.config.js  project-words.txt  tailwind.config.js  tsconfig.json
.github/: dependabot.yaml  dependabot.yml  labels.json
.github/workflows/: container.yaml  publish.yml  publish_crate.yml  publish_docker_image.yml  release.yml  test.yml  test_docker_build.yml  (+1 more)
components/: Authenticator.vue  Breadcrumb.vue  ColorModeSelector.vue  FilterCategory.vue  Markdown.vue  NavigationBar.vue  NavigationBarProfileButton.vue  Notifications.vue  PageSize.vue  Pagination.vue  ThemeToggle.vue  TorrustButton.vue  TorrustSelect.vue
composables/: helpers.ts  states.ts  useFetchForTextFiles.ts
docs/: containerization_guide.md  containers.md  development_guide.md  index.md  release_process.md  release_process_guide.md  screenshots.md  user_guide.md
licensing/: file_header_agplv3.txt
pages/: index.vue  license.vue  signin.vue  signup.vue  torrents.vue  upload.vue
plugins/: notifications.client.ts
public/: COPYRIGHT.md  LICENSE-AGPL_3_0.md
server/: README.md  main.rs
src/: App.vue  main.js
store/: auth.js  index.ts  settings.ts  user.ts
utils/: downloadTorrent.ts  fileSize.ts  timeSince.ts
(+155 files in other folders)
